po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -9,13 +9,14 @@
 # Barnicol <g.barnicol@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
 # BFPTC <webmaster@bienfaitpourta.com>, 2016
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2017
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # elma dontovska <elmadont@gmail.com>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Imane Sadaoui <imane.sadaoui@gmail.com>, 2016
-# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # mgregoire <mgregoire@mgregoire.net>, 2016
 # Nicolas GAILLARD <ngaillard.vosges@gmail.com>, 2015
@@ -25,7 +26,7 @@
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # ShevAbam, 2016
-# ShevAbam, 2016
+# ShevAbam, 2016-2017
 # SR71 <ben.alard@gmail.com>, 2012
 # Vincent Lucy <vincent.lucy@gmail.com>, 2014
 # Vincent Tercelin <vincent.tercelin@gmail.com>, 2016
@@ -38,8 +39,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-25 09:00+0000\n"
-"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
+"PO-Revision-Date: 2017-01-17 16:35+0000\n"
+"Last-Translator: Brodziak jean jacques <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -143,11 +144,11 @@ msgstr "Extension désactivée"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgraded"
-msgstr "Extension mise à jour"
+msgstr "L'extension a été mise à jour."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgrade Failed"
-msgstr "Échec mise à jour extension"
+msgstr "Échec de mise à jour de l'extension"
 
 #: CRM/Admin/Form/Job.php
 msgid "Manage - Scheduled Jobs"
@@ -217,7 +218,7 @@ msgstr "Hauteur du libellé"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Labels Per Row"
-msgstr "Etiquettes Par Rang"
+msgstr "Étiquettes Par Rang"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Labels Per Column"
@@ -233,11 +234,11 @@ msgstr "Espacement vertical"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Left Padding"
-msgstr "Marge à gauche"
+msgstr "Marge gauche"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Top Padding"
-msgstr "Marge en haut"
+msgstr "Marge  haute"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Selected Label Format has been deleted."
@@ -315,7 +316,7 @@ msgstr "Utilisé pour?"
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
 "Please enter a valid domain for this mailbox account (the part after @)."
-msgstr "Vous devez saisir un domaine valide pour ce compte courriel (la partie après @)."
+msgstr "Veuillez saisir un domaine valide pour ce compte courriel (la partie après @)."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Setting Deleted."
@@ -421,7 +422,7 @@ msgstr "Contacts et dossiers"
 
 #: CRM/Admin/Form/Options.php
 msgid "Cases Only"
-msgstr "Permet à CiviMail de créer des activités lors de l'envoi"
+msgstr "Dossiers seulement"
 
 #: CRM/Admin/Form/Options.php
 msgid "Default Option?"
@@ -478,7 +479,7 @@ msgstr "Les changements n'ont pas été enregistrés."
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Admin/Page/PaymentProcessor.php
 msgid "Settings - Payment Processor"
-msgstr "Passerelles de paiement"
+msgstr "Paramètres - Passerelles de paiement"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Admin/Form/PaymentProcessorType.php
 msgid "Enter a valid URL"
@@ -606,7 +607,7 @@ msgstr "Votre format de page PDF intitulé <strong>%1</strong> a bien été modi
 
 #: CRM/Admin/Form/Persistent.php CRM/Admin/Page/Persistent.php
 msgid "DB Template Strings"
-msgstr "DB Template Strings"
+msgstr "Chaines de modèle DB "
 
 #: CRM/Admin/Form/Persistent.php
 msgid "Context:"
@@ -654,7 +655,7 @@ msgid ""
 "You have enabled the County option. Please ensure you populate the county "
 "table in your CiviCRM Database. You can find extensions to populate counties"
 " in the <a %1>CiviCRM Extensions Directory</a>."
-msgstr "Vous avez activé l'option sur les comtés. Veuillez peupler la table des comtés dans votre base de données CiviCRM. Vous pouvez trouver les extensions pour peupler les comtés dans le <a %1>Répertoire des extensions CiviCRM</a>."
+msgstr "Vous avez activé l'option sur les comtés. Veuillez remplir la table des comtés dans votre base de données CiviCRM. Vous pouvez trouver les extensions pour remplir les comtés dans le <a %1>Répertoire des extensions CiviCRM</a>."
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Populate counties"
@@ -948,7 +949,7 @@ msgstr "Groupe de domaine"
 
 #: CRM/Admin/Form/Preferences/Multisite.php
 msgid "Contacts created on this site are added to this group"
-msgstr "Contacts créés sur ce site et ajoutés à ce groupe"
+msgstr "Les contacts créés sur ce site sont ajoutés à ce groupe"
 
 #: CRM/Admin/Form/Preferences.php
 msgid "Your changes have been saved."
@@ -2499,7 +2500,7 @@ msgstr "ATTENTION: Vous vous apprêtez à supprimer le format d'étiquette <stro
 msgid ""
 "Are you sure you would like to make a copy of the Label Format titled "
 "<strong>%1</strong>?"
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir faire une copie du format d'étiquette intitulé <strong>%1</strong> ?"
 
 #: templates/CRM/Admin/Form/LabelFormats.tpl
 msgid "Space between labels."
@@ -2895,7 +2896,7 @@ msgid ""
 "click the \"Insert Tokens\" link to see a list of available tokens "
 "(including custom fields). Insert the token by clicking the desired token "
 "name."
-msgstr ""
+msgstr "Configurez les libellés d'adresse pour votre site en utilisant les champs de fusion qui sont remplacés par les valeurs des champs de la fiche de chaque contact quand chaque libellé est généré. Placez le curseur dans le champ libellé d'adresse à l'endroit où vous voulez insérer le champ de fusion, puis cliquez sur le lien « Insérer un champ de fusion » pour afficher la liste des champs de fusion disponibles (y compris les champs personnalisés), enfin insérez le champ de fusion en cliquant sur le nom du champ souhaité."
 
 #: templates/CRM/Admin/Form/Preferences/Address.hlp
 msgid ""
@@ -6566,7 +6567,7 @@ msgstr ""
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Hide"
-msgstr ""
+msgstr "Masquer"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Remind me again in a week"
@@ -6586,7 +6587,7 @@ msgstr "CiviCRM État du système"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden"
-msgstr ""
+msgstr "Masqué"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden until %1"
