po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -5,7 +5,7 @@
 # Translators:
 # Calbasi <joan@calbasi.net>, 2013-2015
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2013-2014
-# francescbassas <francesc@babu.cat>, 2013-2016
+# francescbassas <francesc@babu.cat>, 2013-2017
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012-2013
 # ixiam <info@ixiam.com>, 2016
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-15 09:57+0000\n"
+"PO-Revision-Date: 2017-01-18 11:40+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -21299,7 +21299,7 @@ msgstr "En curs"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Overdue"
-msgstr "Endarrerit"
+msgstr "Vençut"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Refunded"
@@ -26593,7 +26593,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Chargeback"
-msgstr ""
+msgstr "Retrocedit"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Activity Details Report"
@@ -26657,7 +26657,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Chargeback Account is"
-msgstr ""
+msgstr "El compte de retrocés és"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Account is"
