po: update po/ca_ES/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/contribute.po
+++ b/po/ca_ES/contribute.po
@@ -5,7 +5,7 @@
 # Translators:
 # Calbasi <joan@calbasi.net>, 2015
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2013-2016
+# francescbassas <francesc@babu.cat>, 2013-2017
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
 # ixiam <info@ixiam.com>, 2016
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-30 12:26+0000\n"
+"PO-Revision-Date: 2017-01-18 11:40+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -662,7 +662,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Pledge payment status should be 'Pending' or  'Overdue'."
-msgstr "El estat del compromís de pagament hauria de ser \"pendent\" o \"endarrerit\"."
+msgstr "El estat del compromís de pagament hauria de ser \"pendent\" o \"vençut\"."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid ""
