--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -7,7 +7,7 @@
 # brouwser <brouwer@ee-atwork.nl>, 2013,2016
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # brouwser <brouwer@ee-atwork.nl>, 2012-2013
-# Geert Buyse <geert.buyse@chiro.be>, 2015-2016
+# Geert Buyse <geert.buyse@chiro.be>, 2015-2017
 # HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-18 09:04+0000\n"
-"Last-Translator: brouwser <brouwer@ee-atwork.nl>\n"
+"PO-Revision-Date: 2017-01-18 13:37+0000\n"
+"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25089,7 +25089,7 @@ msgstr "Etiketten afdrukken"
 
 #: CRM/Contact/Task.php
 msgid "Print/merge document"
-msgstr ""
+msgstr "Document afdrukken/samenvoegen"
 
 #: CRM/Contact/Task.php
 msgid "Email - unhold addresses"
@@ -25707,7 +25707,7 @@ msgstr "Contact(en) zijn samengevoegd."
 
 #: CRM/Dedupe/Merger.php
 msgid " Contact(s) were skipped."
-msgstr ""
+msgstr "Contact(en) zijn overgeslagen."
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact ID %1 has been merged into Contact ID %2 and deleted."
@@ -26360,7 +26360,7 @@ msgstr "Downloaden..."
 
 #: templates/CRM/Contact/Form/Task/Print.tpl
 msgid "Do Not mail"
-msgstr ""
+msgstr "Geen e-mail sturen"
 
 #: templates/CRM/Contact/Page/Dashlet.tpl
 msgid "Remove Permanently?"
@@ -26578,7 +26578,7 @@ msgstr "Relatieve datumfilters"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Print/Merge Document"
-msgstr ""
+msgstr "Document afdrukken/samenvoegen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Export letters and other printable documents."
@@ -26594,7 +26594,7 @@ msgstr "Contact samengevoegd naar ander contact"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Boekhoudperiode afsluiten"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Chargeback"
