po: update po/fr_FR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -6,8 +6,9 @@
 # Baptiste Bisson <inactive+baptisteb@transifex.com>, 2016
 # Baptiste Bisson <inactive+baptisteb@transifex.com>, 2016
 # SR71 <ben.alard@gmail.com>, 2012
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2017
 # CARFIL <c.carfil.it@mairie-dammarie-les-lys.fr>, 2013
-# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2016
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe Migrenne <migrenne@gmail.com>, 2015
@@ -24,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-25 10:37+0000\n"
-"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
+"PO-Revision-Date: 2017-01-18 08:59+0000\n"
+"Last-Translator: Brodziak jean jacques <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1374,7 +1375,7 @@ msgid ""
 "If the page 'Separate Membership Payment' is NOT enabled AND the "
 "Contribution Amount is enabled so that user's can opt to give more than the "
 "minimum membership fee - then the display looks like this:"
-msgstr "Si l'option « Paiement séparé de l'adhésion » n'est PAS activée ET la section montant de contribution est activée afin que l'utilisateur puisse donner plus que la cotisation minimale, alors l'affichage ressemble à ceci :"
+msgstr "Si l'option « Paiement séparé de l'adhésion » n'est PAS activée ET si la section montant de contribution est activée afin que l'utilisateur puisse donner plus que la cotisation minimale, alors l'affichage ressemble à ceci :"
 
 #: templates/CRM/Member/Form/MembershipBlock.hlp
 msgid ""
@@ -1416,7 +1417,7 @@ msgid ""
 "options, including allowing constituents to sign up for multiple memberships"
 " at the same time. Click <a href='%1'>here</a> if you want to configure "
 "price sets for your site."
-msgstr "Aucune tarification d'adhésion n'a été configurée / activée pour votre site. Les tarifications vous permettent de configurer des options plus complexes pour les nouvelles adhésions ou le renouvellement d'adhésions, par exemple peuvent permettre à vos adhérents de souscrire à plusieurs types d'adhésion en même temps. Cliquez <a href='%1'>ici</a> si vous voulez configurer une tarification pour votre site."
+msgstr "Aucune tarification d'adhésion n'a été configurée / activée pour votre site. Les tarifications vous permettent de configurer des options plus complexes pour les nouvelles adhésions ou le renouvellement d'adhésions. Cela peut permettre à vos adhérents de souscrire à plusieurs types d'adhésion en même temps. Cliquez <a href='%1'>ici</a> si vous voulez configurer une tarification pour votre site."
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid ""
@@ -1674,7 +1675,7 @@ msgid ""
 "subscription begins. Example: A fixed period membership with Start Day set "
 "to Jan 01 means that membership periods would be 1/1/06 - 12/31/06 for "
 "anyone signing up during 2006."
-msgstr "Mois et jour où une période d'adhésion <strong>fixe</strong> commence. Exemple : une période fixe débutant le 1er janvier signifie que la période d'adhésion sera du 01/01/2009 au 31/12/2009 pour tout adhérant s'inscrivant en 2009."
+msgstr "Mois et jour où une période d'adhésion <strong>fixe</strong> commence. Exemple : une période fixe débutant le 1er janvier signifie que la période d'adhésion sera du 01/01/2016 au 31/12/2016 pour tout adhérent s'inscrivant en 2016."
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
