--- a/po/fr_FR/report.po
+++ b/po/fr_FR/report.po
@@ -4,11 +4,12 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2017
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
-# Jean jacques BRODZIAK <jj.brodziak@cpe31.com>, 2016
+# Brodziak jean jacques <jj.brodziak@cpe31.com>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-25 11:04+0000\n"
-"Last-Translator: Jean jacques BRODZIAK <jj.brodziak@cpe31.com>\n"
+"PO-Revision-Date: 2017-01-18 08:04+0000\n"
+"Last-Translator: Brodziak jean jacques <jj.brodziak@cpe31.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -807,7 +808,7 @@ msgstr "Voir toutes les contributions pour ce pays"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "View repeatDetails for this state."
-msgstr "View repeatDetails for this state."
+msgstr "Voir repeatDetails pour cet état."
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "View Contribution details for this contact"
@@ -1212,11 +1213,11 @@ msgstr "URL cliqué"
 
 #: CRM/Report/Form/Mailing/Clicks.php
 msgid "Click Count"
-msgstr "Nombre de clique"
+msgstr "Nombre de clics"
 
 #: CRM/Report/Form/Mailing/Clicks.php
 msgid "Clicks: %1"
-msgstr "Cliques: %1"
+msgstr "Clics: %1"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
@@ -1224,7 +1225,7 @@ msgstr "Désabonné"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opted-out"
-msgstr "S'est exclu des mailings"
+msgstr "Exclu des mailings"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Replied"
@@ -1626,7 +1627,7 @@ msgstr "URL du compte rendu"
 
 #: CRM/Report/Form.php
 msgid "The report is attached as a CSV file."
-msgstr "Le compte rendu est rattaché sous la forme d'un fichier CSV."
+msgstr "Le compte rendu est attaché sous la forme d'un fichier CSV."
 
 #: CRM/Report/Form.php
 msgid "The report is attached as a PDF file."
@@ -1658,7 +1659,7 @@ msgstr "Champ d'adresse complémentaire 2"
 
 #: CRM/Report/Form.php
 msgid "Contact Prefix"
-msgstr "Prefix du Contact"
+msgstr "Prefixe du Contact"
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
@@ -1666,7 +1667,7 @@ msgstr "Surnom"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
-msgstr "Suffix du Contact"
+msgstr "Suffixe du Contact"
 
 #: CRM/Report/Form.php
 msgid "Address Greeting"
@@ -1738,7 +1739,7 @@ msgstr "Compte(s) rendu(s) créé(s) depuis le modèle: %1"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "%1 Reports"
-msgstr "%1Comptes rendu"
+msgstr "%1 Comptes rendu"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "New %1 Report"
@@ -1991,7 +1992,7 @@ msgid ""
 "can reduce the number of rows included in each page when the report is part "
 "of the Dashboard by entering the desired row count here. Users will still be"
 " able to navigate through the full report using a pager."
-msgstr "Le nombre par défaut du nombre de rangées par page pour la plupart des comptes rendu est 50. Cependant, ce nombre peut être trop grand pour un compte rendu qui est affiché dans le tableau de bord de la page d'accueil. Il est possible de changer ce nombre pour un compte rendu qui fait partie du tableau de bord d'accueil en entrant ce nombre ici. Les utilisateurs auront quand même la possibilité de naviguer à travers l'ensemble du compte rendu."
+msgstr "Le nombre par défaut du nombre de lignes par page pour la plupart des comptes rendu est 50. Cependant, ce nombre peut être trop grand pour un compte rendu qui est affiché dans le tableau de bord de la page d'accueil. Il est possible de changer ce nombre pour un compte rendu qui fait partie du tableau de bord d'accueil en entrant ce nombre ici. Les utilisateurs auront quand même la possibilité de naviguer à travers l'ensemble du compte rendu."
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
@@ -2217,15 +2218,15 @@ msgstr "% Anciens donateurs"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% Upgraded Donors"
-msgstr ""
+msgstr "% Donateurs enregistrés"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% Downgraded Donors"
-msgstr ""
+msgstr "% Donateurs déclassés"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% Maintained Donors"
-msgstr ""
+msgstr "% Donateurs maintenus"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Initial Date Range:"
