--- a/po/sr_RS@latin/pcp.po
+++ b/po/sr_RS@latin/pcp.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-23 13:59+0000\n"
+"PO-Revision-Date: 2017-01-18 11:14+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -461,7 +461,7 @@ msgstr "Uklonite ovu stranicu (ova akcija je nepovratna)"
 
 #: CRM/PCP/Page/PCPInfo.php
 msgid "Contribute Now"
-msgstr ""
+msgstr "Doniraj sada"
 
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
@@ -884,7 +884,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "Managing Your Page"
-msgstr ""
+msgstr "Mendažment vaše stranice"
 
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
@@ -916,7 +916,7 @@ msgstr ""
 
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "Click or paste this link into your browser"
-msgstr ""
+msgstr "Kliknite na ovaj link, ili ga prekopirajte u pretraživač"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "PCP Block"
