--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -3,14 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
 # Marinela Panić <marinela@catalystbalkans.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-17 12:50+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-01-18 11:12+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1633,7 +1633,7 @@ msgstr ""
 
 #: templates/CRM/Event/Cart/Form/Checkout/ConferenceEvents.tpl
 msgid "Choose Events For %1 (%2)"
-msgstr ""
+msgstr "Izaberite događaje za %1 (%2)"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ConferenceEvents.tpl
 msgid "Session is Full"
@@ -1655,7 +1655,7 @@ msgstr "Kliknite ovde da registrujete drugu osobu za ovaj događaj."
 #: templates/CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.tpl
 #: templates/CRM/Event/Form/Registration/Register.tpl
 msgid "Not %1, or want to register a different person"
-msgstr ""
+msgstr "Nije %1, ili želi da registruje drugu osobu"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.tpl
 msgid "Add Another Participant"
@@ -1811,7 +1811,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "Change applies to this %1 and all that come after it."
-msgstr ""
+msgstr "Promena će uticati na ovaj %1 i sve koji dolaze posle."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "Every %1"
@@ -1825,15 +1825,15 @@ msgstr ""
 msgid ""
 "Changes to date or time will <em>not</em> be applied to others in the "
 "series."
-msgstr ""
+msgstr "Promene datuma ili vremena se  <em>neće</em> preneti na ostale u seriji."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "Update repeating %1"
-msgstr ""
+msgstr "Ažuriraj ponavljajuće %1"
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "Mode could not be updated, save only this %1?"
-msgstr ""
+msgstr "Mod nije moguće ažurirati, sačuvaj samo %1?"
 
 #: templates/CRM/Event/Form/ManageEvent/Delete.tpl
 msgid ""
@@ -2212,7 +2212,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Create a profile (e.g. 'Participant Information')."
-msgstr ""
+msgstr "Kreirajte profil (npr. 'Informacije o učesniku')."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Add your custom field(s) to this profile as profile fields."
@@ -2447,7 +2447,7 @@ msgstr "- isto kao glavni kontakt -"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 msgid "Connected Repeating Events"
-msgstr ""
+msgstr "Povezani događaji koji se ponavljaju"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 msgid "Event Link"
@@ -2464,7 +2464,7 @@ msgstr "Konfiguracija događaja"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid "Info &amp; Settings"
-msgstr ""
+msgstr "Info &amp; Podešavanja"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid ""
@@ -2562,11 +2562,11 @@ msgstr "Registruj učesnika"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.tpl
 msgid "Online Registration (Test-drive)"
-msgstr ""
+msgstr "Onlajn registracija (test)"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.tpl
 msgid "Online Registration (Live)"
-msgstr ""
+msgstr "Onlajn registracija (live)"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.tpl
 #: templates/CRM/Event/Page/EventInfo.tpl
@@ -3235,7 +3235,7 @@ msgstr ""
 #: templates/CRM/Event/Page/DashBoard.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "HTML listing of current and future public events."
-msgstr ""
+msgstr "HTML listing sadašnjih i budućih javnih događaja."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl
@@ -3314,7 +3314,7 @@ msgstr "Linkovi ka listinzima učesnika."
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "List counted participants"
-msgstr ""
+msgstr "Lista prebrojanih učesnika"
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "List uncounted participants"
@@ -3414,7 +3414,7 @@ msgstr ""
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid "RSS 2.0 Feeds"
-msgstr ""
+msgstr "RSS 2.0 Feeds"
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid ""
@@ -3439,7 +3439,7 @@ msgstr "Registracija (Test)"
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Registration (Live)"
-msgstr ""
+msgstr "Registracija (live)"
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Don't see your event listed? Try \"Search All or by Date Range\" above."
@@ -3477,7 +3477,7 @@ msgstr ""
 msgid ""
 "Click <a %1>Add Event Registration</a> to register this contact for an "
 "event."
-msgstr ""
+msgstr "Kliknite na <a %1>Dodaj registraciju za događaj</a> da registrujete ovaj kontakt za događaj."
 
 #: templates/CRM/Event/Page/Tab.tpl
 msgid ""
@@ -3830,7 +3830,7 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "PDF letter - print for participants"
-msgstr ""
+msgstr "PDF pismo - štampa za učesnike"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Email)"
@@ -3910,7 +3910,7 @@ msgstr "Pogledaj ovog učesnika"
 
 #: templates/CRM/Event/Form/SelfSvcTransfer.tpl
 msgid "Current<br />Participant"
-msgstr ""
+msgstr "Trenutni<br />Učesnik"
 
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
