--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Marinela Panić <marinela@catalystbalkans.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-20 15:50+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-01-18 13:47+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -59,7 +60,7 @@ msgid ""
 "Oops, it looks like there is no valid membership status corresponding to the"
 " membership start and end dates for this membership. Contact the site "
 "administrator for assistance."
-msgstr ""
+msgstr "Ups, izgleda da ne postoji važeći status članstva koji odgovara datumima početka i završetka ovog članstva. Za pomoć kontaktirajte administratora sajta."
 
 #: CRM/Member/BAO/Membership.php
 msgid "Could not find a system table"
@@ -103,7 +104,7 @@ msgstr "%3. Postoje kontakti kojima je dodeljen ovaj tip članstva. Pretražite 
 msgid ""
 "%2. This Membership Type is used in an <a href='%1'>Online Contribution "
 "page</a>. Uncheck this membership type in the Memberships tab."
-msgstr ""
+msgstr "%2. Ovaj tip članstva koristi se na <a href='%1'>Stranica za online donacije</a>. Odštiklirajte ovaj tip članstva u kartici Članstvo."
 
 #: CRM/Member/BAO/Query.php
 msgid "Member Since %2 %1"
@@ -135,11 +136,11 @@ msgstr "Članstvo NIJE sa naknadnim plaćanjem"
 
 #: CRM/Member/BAO/Query.php
 msgid "Primary Members Only"
-msgstr ""
+msgstr "Samo primarni članovi"
 
 #: CRM/Member/BAO/Query.php
 msgid "Related Members Only"
-msgstr ""
+msgstr "Samo povezani članovi"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Type(s)"
@@ -147,7 +148,7 @@ msgstr "Tip(ovi) članstva"
 
 #: CRM/Member/BAO/Query.php
 msgid "Primary Member?"
-msgstr ""
+msgstr "Primaran član?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Pay Later?"
@@ -179,7 +180,7 @@ msgstr ""
 
 #: CRM/Member/DAO/Membership.php
 msgid "Primary Member ID"
-msgstr ""
+msgstr "ID primarnog člana"
 
 #: CRM/Member/DAO/Membership.php CRM/Member/DAO/MembershipLog.php
 msgid "Max Related"
@@ -285,7 +286,7 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipStatus.php
 msgid "Default Status?"
-msgstr ""
+msgstr "Podrazumevani status?"
 
 #: CRM/Member/DAO/MembershipStatus.php
 msgid "Is Reserved"
