--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -3,7 +3,8 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2013-2016
+# Geert Buyse <geert.buyse@chiro.be>, 2017
+# HanV <han.velthuis@home.nl>, 2013-2017
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
 # Jan Verlaan <jan@verlaan.org>, 2012
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-18 20:40+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2060,19 +2061,19 @@ msgstr "Er zijn geen rapportsjablonen."
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Save a copy..."
-msgstr ""
+msgstr "Kopie opslaan"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "(Copy) "
-msgstr ""
+msgstr "(Kopiëren)"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Print to PDF"
-msgstr ""
+msgstr "PDF-brief afdrukken"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Export as CSV"
-msgstr ""
+msgstr "Exporteren als CSV"
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid "Delete report"
@@ -2155,7 +2156,7 @@ msgstr "Contacten samenvoegen"
 
 #: CRM/Report/Form/Contribute/DeferredRevenue.php
 msgid "Deferred Financial Account"
-msgstr ""
+msgstr "Uitgestelde financiële rekening"
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Net"
@@ -2163,7 +2164,7 @@ msgstr "Netto"
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "View Contribution Details"
-msgstr ""
+msgstr "Bijdragedetails"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Email on hold"
@@ -2203,39 +2204,39 @@ msgstr "Laatste verwerkte bijdrage"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% New Donors"
-msgstr ""
+msgstr "% Nieuwe donateurs"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% Lapsed Donors"
-msgstr ""
+msgstr "% Gestopte donateurs"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% Upgraded Donors"
-msgstr ""
+msgstr "% Donateurs met een hogere donatie"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% Downgraded Donors"
-msgstr ""
+msgstr "% Donateurs met een lagere donatie"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% Maintained Donors"
-msgstr ""
+msgstr "% Behouden donateurs"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Initial Date Range:"
-msgstr ""
+msgstr "Eerste periode:"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Total Donations"
-msgstr ""
+msgstr "Totaal Donaties"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "Second Date Range:"
-msgstr ""
+msgstr "Tweede periode:"
 
 #: CRM/Report/Form/Contribute/Repeat.php
 msgid "% Change"
-msgstr ""
+msgstr "% Wijziging"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Week Beginning"
@@ -2255,17 +2256,17 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Sybunt.php
 msgid "Up To %1"
-msgstr ""
+msgstr "Maximaal %1"
 
 #: CRM/Report/Form/Contribute/Sybunt.php
 msgid "LifeTime"
-msgstr ""
+msgstr "Levensduur"
 
 #: CRM/Report/Form/Event/IncomeCountSummary.php
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/Summary.php
 msgid "Total Income"
-msgstr ""
+msgstr "Totaal inkomsten"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Registered by Participant ID"
@@ -2353,11 +2354,11 @@ msgstr "Algemeen totaal"
 
 #: CRM/Report/Form.php
 msgid "Contact Modified"
-msgstr ""
+msgstr "Contact gewijzigd"
 
 #: CRM/Report/Form.php
 msgid "Do not SMS"
-msgstr ""
+msgstr "Geen SMS"
 
 #: CRM/Report/Form.php
 msgid "Do not bulk email"
