--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2012
+# Geert Buyse <geert.buyse@chiro.be>, 2017
 # HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-18 13:49+0000\n"
+"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2324,11 +2325,11 @@ msgstr ""
 
 #: CRM/Member/BAO/Query.php
 msgid "- None -"
-msgstr ""
+msgstr "- geen -"
 
 #: CRM/Member/BAO/Query.php
 msgid "Ended"
-msgstr ""
+msgstr "Beëindigd"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden?"
