--- a/po/nl_NL/install.po
+++ b/po/nl_NL/install.po
@@ -3,15 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2014-2016
+# HanV <han.velthuis@home.nl>, 2014-2017
 # Kevin Levie <kevin@levity.nl>, 2016
 # Maurice Snellen <maurice@snellen.xs4all.nl>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-18 20:56+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -589,21 +589,21 @@ msgstr "Vereisten"
 
 #: install/index.php
 msgid "[your Backdrop root directory]"
-msgstr ""
+msgstr "[uw Backdrop rootmap]"
 
 #: install/index.php
 msgid "This installer can only be used for the Backdrop version of CiviCRM."
-msgstr ""
+msgstr "Dit installatieprogramma kan alleen gebruikt worden voor de Backdrop-versie van CiviCRM."
 
 #: install/index.php
 msgid "Oops! Incorrect Backdrop version"
-msgstr ""
+msgstr "Oeps! Verkeerde Backdrop-versie"
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Backdrop 1.x. Please ensure "
 "that '%1' exists if you are running Backdrop 1.0 and over."
-msgstr ""
+msgstr "Deze versie van CiviCRM kan alleen worden gebruikt met Backdrop 1.x. Verzeker u er van dat '%1' bestaat als u Backdrop 1.0 of hoger heeft."
 
 #: install/index.php
 msgid ""
@@ -611,12 +611,12 @@ msgid ""
 " authenticated users access to public CiviCRM forms and features. We "
 "recommend that you <a %1>review these permissions</a> to ensure that they "
 "are appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "De gebruikersmachtigingen voor Backdrop zijn automatisch ingesteld - hiermee krijgen anonieme en geverifieerde gebruikers toegang tot openbare CiviCRM-formulieren en -functionaliteit. We raden u aan <a %1>deze machtigingen te controleren</a> om u ervan te verzekeren dat ze aan uw eisen voldoen. (<a %2> meer weten...</a>)"
 
 #: install/template.html
 msgid "Backdrop Database Settings"
-msgstr ""
+msgstr "Database-instellingen Backdrop"
 
 #: install/template.html
 msgid "Backdrop Database Details"
-msgstr ""
+msgstr "Database-details Backdrop"
