po: update po/sr_RS@latin/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-13 10:40+0000\n"
+"PO-Revision-Date: 2017-01-18 09:56+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -68,7 +68,7 @@ msgstr "Predmet %1 - klijent je ponovo dodeljen sa %2 na %3. Novi ID predmeta je
 msgid ""
 "Case %1 copied from contact id %2 to contact id %3 via merge. New Case ID is"
 " %4."
-msgstr ""
+msgstr "Predmet %1 kopiran iz kontakta ID %2 u kontakt ID %3 spajanjem. Novi ID predmeta je %4."
 
 #: CRM/Case/BAO/Case.php
 msgid "Case %1 merged into case %2"
@@ -95,7 +95,7 @@ msgstr "Nađi obrisane predmete"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Subject %1 '%2'"
-msgstr ""
+msgstr "Subjekat aktivnosti %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Case Subject %1 '%2'"
@@ -103,7 +103,7 @@ msgstr ""
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Reporter %1 '%2'"
-msgstr ""
+msgstr "Reporter aktivnovsti %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Actual Date %1 %2"
