po: update po/sr_RS@latin/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/provinces.po
+++ b/po/sr_RS@latin/provinces.po
@@ -5,12 +5,13 @@
 # Translators:
 # Bojana Radulović <bojana@catalystbalkans.org>, 2017
 # Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Marinela Panić <marinela@catalystbalkans.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-16 22:27+0000\n"
-"Last-Translator: Bojana Radulović <bojana@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-01-18 15:52+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3600,7 +3601,7 @@ msgstr "La Vega"
 
 msgctxt "province"
 msgid "Maroia Trinidad Sánchez"
-msgstr ""
+msgstr "Marija Trinidad Sančez"
 
 msgctxt "province"
 msgid "Monseñor Nouel"
@@ -3608,11 +3609,11 @@ msgstr ""
 
 msgctxt "province"
 msgid "Monte Cristi"
-msgstr ""
+msgstr "Monte Kristi"
 
 msgctxt "province"
 msgid "Monte Plata"
-msgstr ""
+msgstr "Monte Plata"
 
 msgctxt "province"
 msgid "Pedernales"
@@ -3720,227 +3721,227 @@ msgstr ""
 
 msgctxt "province"
 msgid "Djelfa"
-msgstr ""
+msgstr "Dželfa"
 
 msgctxt "province"
 msgid "El Bayadh"
-msgstr ""
+msgstr "El Bajad"
 
 msgctxt "province"
 msgid "El Oued"
-msgstr ""
+msgstr "El Ujed"
 
 msgctxt "province"
 msgid "El Tarf"
-msgstr ""
+msgstr "El Tarf"
 
 msgctxt "province"
 msgid "Ghardaia"
-msgstr ""
+msgstr "Gardaja"
 
 msgctxt "province"
 msgid "Guelma"
-msgstr ""
+msgstr "Gelma"
 
 msgctxt "province"
 msgid "Illizi"
-msgstr ""
+msgstr "Ilizi"
 
 msgctxt "province"
 msgid "Jijel"
-msgstr ""
+msgstr "Džidžel"
 
 msgctxt "province"
 msgid "Khenchela"
-msgstr ""
+msgstr "Henšela"
 
 msgctxt "province"
 msgid "Laghouat"
-msgstr ""
+msgstr "Laguat"
 
 msgctxt "province"
 msgid "Mascara"
-msgstr ""
+msgstr "Maskara"
 
 msgctxt "province"
 msgid "Medea"
-msgstr ""
+msgstr "Medeja"
 
 msgctxt "province"
 msgid "Mila"
-msgstr ""
+msgstr "Mila"
 
 msgctxt "province"
 msgid "Mostaganem"
-msgstr ""
+msgstr "Mostaganem"
 
 msgctxt "province"
 msgid "Msila"
-msgstr ""
+msgstr "Msila"
 
 msgctxt "province"
 msgid "Naama"
-msgstr ""
+msgstr "Nama"
 
 msgctxt "province"
 msgid "Oran"
-msgstr ""
+msgstr "Oran"
 
 msgctxt "province"
 msgid "Ouargla"
-msgstr ""
+msgstr "Uargla"
 
 msgctxt "province"
 msgid "Oum el Bouaghi"
-msgstr ""
+msgstr "Um el Buagi"
 
 msgctxt "province"
 msgid "Relizane"
-msgstr ""
+msgstr "Relizan"
 
 msgctxt "province"
 msgid "Saida"
-msgstr ""
+msgstr "Sajida"
 
 msgctxt "province"
 msgid "Setif"
-msgstr ""
+msgstr "Setif"
 
 msgctxt "province"
 msgid "Sidi Bel Abbes"
-msgstr ""
+msgstr "Sidi Bel Abes"
 
 msgctxt "province"
 msgid "Skikda"
-msgstr ""
+msgstr "Skikda"
 
 msgctxt "province"
 msgid "Souk Ahras"
-msgstr ""
+msgstr "Suk Ahras"
 
 msgctxt "province"
 msgid "Tamanghasset"
-msgstr ""
+msgstr "Tamanraset"
 
 msgctxt "province"
 msgid "Tebessa"
-msgstr ""
+msgstr "Tebesa"
 
 msgctxt "province"
 msgid "Tiaret"
-msgstr ""
+msgstr "Tijaret"
 
 msgctxt "province"
 msgid "Tindouf"
-msgstr ""
+msgstr "Tinduf"
 
 msgctxt "province"
 msgid "Tipaza"
-msgstr ""
+msgstr "Tipasa"
 
 msgctxt "province"
 msgid "Tissemsilt"
-msgstr ""
+msgstr "Tisemsilt"
 
 msgctxt "province"
 msgid "Tizi Ouzou"
-msgstr ""
+msgstr "Tizi Uzu"
 
 msgctxt "province"
 msgid "Tlemcen"
-msgstr ""
+msgstr "Tlemsen"
 
 msgctxt "province"
 msgid "Azuay"
-msgstr ""
+msgstr "Azuaj"
 
 msgctxt "province"
 msgid "Bolivar"
-msgstr ""
+msgstr "Bolivar"
 
 msgctxt "province"
 msgid "Canar"
-msgstr ""
+msgstr "Kanjar"
 
 msgctxt "province"
 msgid "Carchi"
-msgstr ""
+msgstr "Karči"
 
 msgctxt "province"
 msgid "Cotopaxi"
-msgstr ""
+msgstr "Kotopaksi"
 
 msgctxt "province"
 msgid "Chimborazo"
-msgstr ""
+msgstr "Čimborazo"
 
 msgctxt "province"
 msgid "El Oro"
-msgstr ""
+msgstr "El Oro"
 
 msgctxt "province"
 msgid "Esmeraldas"
-msgstr ""
+msgstr "Esmeraldas"
 
 msgctxt "province"
 msgid "Galapagos"
-msgstr ""
+msgstr "Galapagos"
 
 msgctxt "province"
 msgid "Guayas"
-msgstr ""
+msgstr "Guajas"
 
 msgctxt "province"
 msgid "Imbabura"
-msgstr ""
+msgstr "Imbabura"
 
 msgctxt "province"
 msgid "Loja"
-msgstr ""
+msgstr "Loha"
 
 msgctxt "province"
 msgid "Los Rios"
-msgstr ""
+msgstr "Los Rios"
 
 msgctxt "province"
 msgid "Manabi"
-msgstr ""
+msgstr "Manabi"
 
 msgctxt "province"
 msgid "Morona-Santiago"
-msgstr ""
+msgstr "Morona-Santjago"
 
 msgctxt "province"
 msgid "Napo"
-msgstr ""
+msgstr "Napo"
 
 msgctxt "province"
 msgid "Orellana"
-msgstr ""
+msgstr "Oreljana"
 
 msgctxt "province"
 msgid "Pastaza"
-msgstr ""
+msgstr "Pastaza"
 
 msgctxt "province"
 msgid "Pichincha"
-msgstr ""
+msgstr "Pinčinča"
 
 msgctxt "province"
 msgid "Sucumbios"
-msgstr ""
+msgstr "Sukumbios"
 
 msgctxt "province"
 msgid "Tungurahua"
-msgstr ""
+msgstr "Tungurahua"
 
 msgctxt "province"
 msgid "Zamora-Chinchipe"
-msgstr ""
+msgstr "Zamora-Činčipe"
 
 msgctxt "province"
 msgid "Harjumsa"
-msgstr ""
+msgstr "Harjuma"
 
 msgctxt "province"
 msgid "Hitumea"
@@ -3948,15 +3949,15 @@ msgstr ""
 
 msgctxt "province"
 msgid "Ida-Virumsa"
-msgstr ""
+msgstr "Ida-Viru"
 
 msgctxt "province"
 msgid "Jogevamsa"
-msgstr ""
+msgstr "Jigeva"
 
 msgctxt "province"
 msgid "Jarvamsa"
-msgstr ""
+msgstr "Jarva"
 
 msgctxt "province"
 msgid "Lasnemsa"
@@ -3964,7 +3965,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Laane-Virumaa"
-msgstr ""
+msgstr "Ljaene-Viru"
 
 msgctxt "province"
 msgid "Polvamea"
@@ -4000,191 +4001,191 @@ msgstr ""
 
 msgctxt "province"
 msgid "Ad Daqahllyah"
-msgstr ""
+msgstr "Dakahlija"
 
 msgctxt "province"
 msgid "Al Bahr al Ahmar"
-msgstr ""
+msgstr "Crveno more"
 
 msgctxt "province"
 msgid "Al Buhayrah"
-msgstr ""
+msgstr "Buhejra"
 
 msgctxt "province"
 msgid "Al Fayym"
-msgstr ""
+msgstr "Fajum"
 
 msgctxt "province"
 msgid "Al Gharbiyah"
-msgstr ""
+msgstr "Garbija"
 
 msgctxt "province"
 msgid "Al Iskandarlyah"
-msgstr ""
+msgstr "Aleksandrija"
 
 msgctxt "province"
 msgid "Al Isma illyah"
-msgstr ""
+msgstr "Ismailija"
 
 msgctxt "province"
 msgid "Al Jizah"
-msgstr ""
+msgstr "Giza"
 
 msgctxt "province"
 msgid "Al Minuflyah"
-msgstr ""
+msgstr "Minufija"
 
 msgctxt "province"
 msgid "Al Minya"
-msgstr ""
+msgstr "Minja"
 
 msgctxt "province"
 msgid "Al Qahirah"
-msgstr ""
+msgstr "Kairo"
 
 msgctxt "province"
 msgid "Al Qalyublyah"
-msgstr ""
+msgstr "Kaljubija"
 
 msgctxt "province"
 msgid "Al Wadi al Jadid"
-msgstr ""
+msgstr "Nova Dolina"
 
 msgctxt "province"
 msgid "Ash Sharqiyah"
-msgstr ""
+msgstr "Šarkija"
 
 msgctxt "province"
 msgid "As Suways"
-msgstr ""
+msgstr "Suec"
 
 msgctxt "province"
 msgid "Aswan"
-msgstr ""
+msgstr "Asuan"
 
 msgctxt "province"
 msgid "Asyut"
-msgstr ""
+msgstr "Asjut"
 
 msgctxt "province"
 msgid "Bani Suwayf"
-msgstr ""
+msgstr "Beni Suejf"
 
 msgctxt "province"
 msgid "Bur Sa'id"
-msgstr ""
+msgstr "Port Said"
 
 msgctxt "province"
 msgid "Dumyat"
-msgstr ""
+msgstr "Damijeta"
 
 msgctxt "province"
 msgid "Janub Sina'"
-msgstr ""
+msgstr "Južni Sinaj"
 
 msgctxt "province"
 msgid "Kafr ash Shaykh"
-msgstr ""
+msgstr "Kafr eš Šejh"
 
 msgctxt "province"
 msgid "Matruh"
-msgstr ""
+msgstr "Mersa Matruh"
 
 msgctxt "province"
 msgid "Qina"
-msgstr ""
+msgstr "Kena"
 
 msgctxt "province"
 msgid "Shamal Sina'"
-msgstr ""
+msgstr "Severni Sinaj"
 
 msgctxt "province"
 msgid "Suhaj"
-msgstr ""
+msgstr "Sohag"
 
 msgctxt "province"
 msgid "Anseba"
-msgstr ""
+msgstr "Anseba"
 
 msgctxt "province"
 msgid "Debub"
-msgstr ""
+msgstr "Debub"
 
 msgctxt "province"
 msgid "Debubawi Keyih Bahri [Debub-Keih-Bahri]"
-msgstr ""
+msgstr "Južno crveno more"
 
 msgctxt "province"
 msgid "Gash-Barka"
-msgstr ""
+msgstr "Gaš-Barka"
 
 msgctxt "province"
 msgid "Maakel [Maekel]"
-msgstr ""
+msgstr "Maekel"
 
 msgctxt "province"
 msgid "Semenawi Keyih Bahri [Semien-Keih-Bahri]"
-msgstr ""
+msgstr "Severno crveno more"
 
 msgctxt "province"
 msgid "Álava"
-msgstr ""
+msgstr "Alava"
 
 msgctxt "province"
 msgid "Albacete"
-msgstr ""
+msgstr "Albasete"
 
 msgctxt "province"
 msgid "Alicante"
-msgstr ""
+msgstr "Alikante"
 
 msgctxt "province"
 msgid "Almería"
-msgstr ""
+msgstr "Almerija"
 
 msgctxt "province"
 msgid "Asturias"
-msgstr ""
+msgstr "Kneževina Asturija"
 
 msgctxt "province"
 msgid "Ávila"
-msgstr ""
+msgstr "Avila"
 
 msgctxt "province"
 msgid "Badajoz"
-msgstr ""
+msgstr "Badahoz"
 
 msgctxt "province"
 msgid "Baleares"
-msgstr ""
+msgstr "Balearska ostrva"
 
 msgctxt "province"
 msgid "Barcelona"
-msgstr ""
+msgstr "Barselona"
 
 msgctxt "province"
 msgid "Burgos"
-msgstr ""
+msgstr "Burgos"
 
 msgctxt "province"
 msgid "Cáceres"
-msgstr ""
+msgstr "Kaseres"
 
 msgctxt "province"
 msgid "Cádiz"
-msgstr ""
+msgstr "Kadiz"
 
 msgctxt "province"
 msgid "Cantabria"
-msgstr ""
+msgstr "Kantabrija"
 
 msgctxt "province"
 msgid "Castellón"
-msgstr ""
+msgstr "Kasteljon"
 
 msgctxt "province"
 msgid "Ciudad Real"
-msgstr ""
+msgstr "Siudad Real"
 
 msgctxt "province"
 msgid "Cuenca"
@@ -4192,159 +4193,159 @@ msgstr ""
 
 msgctxt "province"
 msgid "Girona [Gerona]"
-msgstr ""
+msgstr "Đirona"
 
 msgctxt "province"
 msgid "Granada"
-msgstr ""
+msgstr "Granada"
 
 msgctxt "province"
 msgid "Guadalajara"
-msgstr ""
+msgstr "Gvadalahara"
 
 msgctxt "province"
 msgid "Guipúzcoa"
-msgstr ""
+msgstr "Gipuzkoa"
 
 msgctxt "province"
 msgid "Huelva"
-msgstr ""
+msgstr "Uelva"
 
 msgctxt "province"
 msgid "Huesca"
-msgstr ""
+msgstr "Ueska"
 
 msgctxt "province"
 msgid "Jaén"
-msgstr ""
+msgstr "Haen"
 
 msgctxt "province"
 msgid "La Coruña"
-msgstr ""
+msgstr "Korunja"
 
 msgctxt "province"
 msgid "La Rioja"
-msgstr ""
+msgstr "Rioha"
 
 msgctxt "province"
 msgid "Las Palmas"
-msgstr ""
+msgstr "Las Palmas"
 
 msgctxt "province"
 msgid "León"
-msgstr ""
+msgstr "Leon"
 
 msgctxt "province"
 msgid "Lleida [Lérida]"
-msgstr ""
+msgstr "Ljeida"
 
 msgctxt "province"
 msgid "Lugo"
-msgstr ""
+msgstr "Lugo"
 
 msgctxt "province"
 msgid "Madrid"
-msgstr ""
+msgstr "Madrid"
 
 msgctxt "province"
 msgid "Málaga"
-msgstr ""
+msgstr "Malaga"
 
 msgctxt "province"
 msgid "Murcia"
-msgstr ""
+msgstr "Mursija"
 
 msgctxt "province"
 msgid "Navarra"
-msgstr ""
+msgstr "Navara"
 
 msgctxt "province"
 msgid "Ourense"
-msgstr ""
+msgstr "Orense"
 
 msgctxt "province"
 msgid "Palencia"
-msgstr ""
+msgstr "Palensija"
 
 msgctxt "province"
 msgid "Pontevedra"
-msgstr ""
+msgstr "Pontevedra"
 
 msgctxt "province"
 msgid "Salamanca"
-msgstr ""
+msgstr "Salamanka"
 
 msgctxt "province"
 msgid "Santa Cruz de Tenerife"
-msgstr ""
+msgstr "Santa Kruz de Tenerife"
 
 msgctxt "province"
 msgid "Segovia"
-msgstr ""
+msgstr "Segovija"
 
 msgctxt "province"
 msgid "Sevilla"
-msgstr ""
+msgstr "Sevilja"
 
 msgctxt "province"
 msgid "Soria"
-msgstr ""
+msgstr "Sorija"
 
 msgctxt "province"
 msgid "Tarragona"
-msgstr ""
+msgstr "Taragona"
 
 msgctxt "province"
 msgid "Teruel"
-msgstr ""
+msgstr "Teruel"
 
 msgctxt "province"
 msgid "Valencia"
-msgstr ""
+msgstr "Valensija"
 
 msgctxt "province"
 msgid "Valladolid"
-msgstr ""
+msgstr "Valjadolid"
 
 msgctxt "province"
 msgid "Vizcaya"
-msgstr ""
+msgstr "Biskaja"
 
 msgctxt "province"
 msgid "Zamora"
-msgstr ""
+msgstr "Zamora"
 
 msgctxt "province"
 msgid "Zaragoza"
-msgstr ""
+msgstr "Saragosa"
 
 msgctxt "province"
 msgid "Ceuta"
-msgstr ""
+msgstr "Seuta"
 
 msgctxt "province"
 msgid "Melilla"
-msgstr ""
+msgstr "Melilja"
 
 msgctxt "province"
 msgid "Addis Ababa"
-msgstr ""
+msgstr "Adis Abeba"
 
 msgctxt "province"
 msgid "Dire Dawa"
-msgstr ""
+msgstr "Dire Dava"
 
 msgctxt "province"
 msgid "Afar"
-msgstr ""
+msgstr "Afar"
 
 msgctxt "province"
 msgid "Amara"
-msgstr ""
+msgstr "Amara"
 
 msgctxt "province"
 msgid "Benshangul-Gumaz"
-msgstr ""
+msgstr "Benišangul-Gumuz"
 
 msgctxt "province"
 msgid "Gambela Peoples"
