po: update po/sr_RS@latin/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/pledge.po
+++ b/po/sr_RS@latin/pledge.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-19 11:15+0000\n"
+"PO-Revision-Date: 2017-01-19 05:12+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -28,15 +28,15 @@ msgstr ""
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Next Payment Date"
-msgstr ""
+msgstr "Datum sledeće uplate"
 
 #: CRM/Pledge/BAO/Pledge.php
 msgid "Paid Amount"
-msgstr ""
+msgstr "Plaćen iznos"
 
 #: CRM/Pledge/BAO/Pledge.php templates/CRM/Pledge/Page/Payment.tpl
 msgid "Paid Date"
-msgstr ""
+msgstr "Plaćeno datuma"
 
 #: CRM/Pledge/BAO/Pledge.php CRM/Pledge/BAO/Query.php
 #: templates/CRM/Pledge/Form/Search/Common.tpl
@@ -138,7 +138,7 @@ msgstr ""
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
-msgstr ""
+msgstr "Maksimalan broj podsetnika"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 #: templates/CRM/Pledge/Form/PledgeView.tpl
@@ -195,19 +195,19 @@ msgstr ""
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Please enter a valid number of installments."
-msgstr ""
+msgstr "Unesite važeći broj rata."
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Please enter a number for frequency (e.g. every \"3\" months)."
-msgstr ""
+msgstr "Unesite broj za učestalost (npr. svaka \"3\" meseca)."
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payments are due on the"
-msgstr ""
+msgstr "Rok za uplatu je"
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Please enter a valid payment due day."
-msgstr ""
+msgstr "Unesite važeći rok za uplatu."
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "each"
@@ -215,15 +215,15 @@ msgstr "svaki"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Payments Start"
-msgstr ""
+msgstr "Uplate počinju"
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Send Acknowledgment?"
-msgstr ""
+msgstr "Pošalji potvrdu"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Acknowledgment Date"
-msgstr ""
+msgstr "Datum potvrde"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Self-service Payments Page"
@@ -235,7 +235,7 @@ msgstr ""
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Installments should be greater than zero."
-msgstr ""
+msgstr "Broj rata treba da bude veći od nule."
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "Please enter a valid frequency day ie. 1 through 31."
@@ -256,7 +256,7 @@ msgstr ""
 
 #: CRM/Pledge/Form/Pledge.php
 msgid "An acknowledgment email has been sent to %1.<br />"
-msgstr ""
+msgstr "Email sa potvrdom je poslat %1. <br />"
 
 #: CRM/Pledge/Form/Pledge.php
 msgid ""
@@ -330,7 +330,7 @@ msgstr ""
 
 #: CRM/Pledge/Info.php
 msgid "delete in CiviPledge"
-msgstr ""
+msgstr "Obriši u CiviPledge"
 
 #: CRM/Pledge/Info.php
 msgid "Delete pledges"
@@ -499,11 +499,11 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Payments Start Date"
-msgstr ""
+msgstr "Uplate počinju datuma"
 
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Payments Ended Date"
-msgstr ""
+msgstr "Uplate se završavaju datuma"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
@@ -523,7 +523,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Show payments"
-msgstr ""
+msgstr "Prikaži uplate"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Hide payments"
@@ -558,11 +558,11 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "(current month)"
-msgstr ""
+msgstr "(ovaj mesec)"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "(current year)"
-msgstr ""
+msgstr "(ova godina)"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Total Pledges"
@@ -570,7 +570,7 @@ msgstr ""
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Payments Received"
-msgstr ""
+msgstr "Uplate primljene"
 
 #: templates/CRM/Pledge/Page/DashBoard.tpl
 msgid "Past Due"
@@ -590,11 +590,11 @@ msgstr ""
 #: xml/templates/message_templates/pledge_reminder_html.tpl
 #: xml/templates/message_templates/pledge_reminder_text.tpl
 msgid "Amount Due"
-msgstr ""
+msgstr "Iznos duga"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
 msgid "Amount Paid"
-msgstr ""
+msgstr "Uplaćeni iznos"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
 msgid "Credit Card Payment"
@@ -683,7 +683,7 @@ msgstr ""
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 msgid "dear %1"
-msgstr ""
+msgstr "dragi/a %1"
 
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
 msgid ""
@@ -799,11 +799,11 @@ msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter a number"
-msgstr ""
+msgstr "Unesite broj"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter number."
-msgstr ""
+msgstr "Unesite broj"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Pledge Block ID"
@@ -823,4 +823,4 @@ msgstr ""
 
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Beginning Date"
-msgstr ""
+msgstr "Datum početka"
