po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-18 11:40+0000\n"
+"PO-Revision-Date: 2017-01-19 17:39+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -13917,7 +13917,7 @@ msgstr "Feu click en %1 des de la fila u per a totes les files"
 #: templates/CRM/Activity/Form/Task/Batch.tpl
 #: templates/CRM/Contact/Form/Task/Batch.tpl
 msgid "Click here to copy the value in row one to ALL rows."
-msgstr "Feu clic aquí per copiar el valor de la fila un a totes les files."
+msgstr "Feu clic aquí per copiar el valor de la primera fila a totes les files."
 
 #: templates/CRM/Activity/Form/Task/Delete.tpl
 msgid "Are you sure you want to delete the selected Activities?"
@@ -22892,7 +22892,7 @@ msgstr "Inscrit"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Attended"
-msgstr "Assistent"
+msgstr "Assistit"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending from pay later"
