po: update po/ca_ES/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Calbasi <joan@calbasi.net>, 2014-2015
-# francescbassas <francesc@babu.cat>, 2013-2016
+# francescbassas <francesc@babu.cat>, 2013-2017
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
 # ixiam <info@ixiam.com>, 2016
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-15 09:22+0000\n"
+"PO-Revision-Date: 2017-01-19 17:37+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2913,25 +2913,25 @@ msgid ""
 " Attended will receive a confirmation email and their payment status will be"
 " set to completed. If this is not what you want to do, you can change their "
 "participant status by editing their event registration record directly."
-msgstr ""
+msgstr "Els participants l'estat dels quals es canvia des de Pendent (pagament diferit) a Inscrit o Assistit rebran un correu electrònic de confirmació i el seu estat de pagament quedarà marcat com a completats. Si no és el que voleu, podeu canviar els estats de participant editant directament els seus registres d'inscripció als esdeveniments."
 
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
 "Participants whose status is changed TO any of the following will be "
 "automatically notified via email: %1."
-msgstr ""
+msgstr "Els participants l'estat dels quals es canvia a qualsevol dels següents seran notificats automàticament via correu electrònic: %1."
 
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
 "Update field values for each participant as needed. To set a field to the "
 "same value for ALL rows, enter that value for the first participation and "
 "then click the <strong>Copy icon</strong> (next to the column title)."
-msgstr ""
+msgstr "Actualitza els valors dels camp per a cada participant segons convingui. Per definir el mateix valor per a totes les files, inseriu aquest valor per a la primera inscripció i seguidament cliqueu la <strong>Icona de copia</strong> (al costat del títol de la columna)."
 
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
 "Click <strong>Update Participant(s)</strong> below to save all your changes."
-msgstr ""
+msgstr "Cliqueu <strong>Actualitza els participants</strong> de sota per desar tots els vostres canvis."
 
 #: templates/CRM/Event/Form/Task/Cancel.tpl
 msgid ""
@@ -3785,7 +3785,7 @@ msgstr ""
 #: CRM/Event/Form/Task/Batch.php CRM/Event/Form/Task/PickProfile.php
 #: CRM/Event/Task.php
 msgid "Update multiple participants"
-msgstr ""
+msgstr "Actualitza varis participants"
 
 #: CRM/Event/Form/Task/Batch.php
 msgid ""
@@ -3799,37 +3799,37 @@ msgid ""
 " Attended will receive a confirmation email and their payment status will be"
 " set to completed. If this is not you want to do, you can change their "
 "participant status by editing their event registration record directly."
-msgstr ""
+msgstr "Els participants l'estat dels quals es canvia des de Pendent (pagament diferit) a Inscrit o Assistit rebran un correu electrònic de confirmació i el seu estat de pagament quedarà marcat com a completats. Si no és el que voleu, podeu canviar els estats de participant editant directament els seus registres d'inscripció als esdeveniments."
 
 #: CRM/Event/Form/Task/Batch.php
 msgid ""
 "Participants whose status is changed TO any of the following will be "
 "automatically notified via email: %1"
-msgstr ""
+msgstr "Els participants l'estat dels quals es canvia a qualsevol dels següents seran notificats automàticament via correu electrònic: %1."
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
-msgstr ""
+msgstr "Elimina els participants de l'esdeveniment"
 
 #: CRM/Event/Task.php
 msgid "Export participants"
-msgstr ""
+msgstr "Exporta els participants"
 
 #: CRM/Event/Task.php
 msgid "Cancel registration"
-msgstr ""
+msgstr "Cancel·la la inscripció"
 
 #: CRM/Event/Task.php
 msgid "Participant status - change (emails sent)"
-msgstr ""
+msgstr "Estat del participant - canvia (s'envien correus electrònics)"
 
 #: CRM/Event/Task.php
 msgid "Name badges - print"
-msgstr ""
+msgstr "Acreditacions - imprimeix"
 
 #: CRM/Event/Task.php
 msgid "PDF letter - print for participants"
-msgstr ""
+msgstr "Carta PDF - imprimeix pels participants"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Email)"
@@ -3916,7 +3916,7 @@ msgid ""
 "Update field values for each participant as needed. To set a field to the same value for ALL rows, enter that value for the first participation and then click the\n"
 "        <strong>Copy icon</strong>\n"
 "        (next to the column title)."
-msgstr ""
+msgstr "Actualitza els valors dels camp per a cada participant segons convingui. Per definir el mateix valor per a totes les files, inseriu aquest valor per a la primera inscripció i seguidament cliqueu la\n        <strong>Icona de copia</strong>\n        (al costat del títol de la columna)."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
